LFLT-349 Visual bugs on LCFA UI  - Added favicon  - Added OpenGraph meta  - Fixed no user comments tag on My comments page  - Fixed sign-out button placement on Profile page  - Removed unnecessary parts of CSS  - Fixed locale dropdown on Profile page  - Fixed placement of author and publish date  - Fixed comment deletion button placement on My comment page  - Added confirmation dialog for comment deletion  - Added navigation bar and the logic for populating it  - Added Google Site Tracking code  - Fixed horizontal scrollbar issue  - Refactored page config  - Minor fixes for mobile view

--- a/web/src/main/resources/webapp/resources/css/mobile.css
+++ b/web/src/main/resources/webapp/resources/css/mobile.css
@@ -67,10 +67,16 @@
 	
 	.forms textarea {
 		margin-bottom: 10px;
+		text-align: left;
 	}
 	
 	.forms label {
 		padding: 0px;
+	}
+
+	#recaptchaWidgetWrapper {
+		text-align: center;
+		width: 100%;
 	}
 	
 	#footer .footerColumn {
